# PPT_Agent

./: .env.example  .gitignore  AI_CONTRIBUTIONS.md  BACKEND_CLEANUP_GUIDE.md  CONTEXT_COMPRESSION_QUICKSTART.md  IDEAL_BACKEND_STRUCTURE.md  IMPROVEMENT_SUMMARY.md  LICENSE  MEMORY_INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_IMPLEMENTATION_PLAN.md  architecture_layers_diagram.py  backend_structure_comparison.py  cleanup_aggressive.sh  cleanup_safe.bat  cleanup_safe.sh  docker-compose.yml  migrate_backend.bat  migrate_backend.sh  openapi_snapshot.json  progressive_vs_parallel.md  pyproject.toml  pytest.ini  test_imports.py  test_results.txt
.claude/: settings.local.json
.github/: AI_DEVELOPMENT.md
backend/: .gitignore  API_SERVICE_DESIGN.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  __init__.py  debug_import.py  docker-compose.yml  pytest.ini  requirements.txt  test_simple_async.py
backend/agents/: README.md  README_MEMORY_INTEGRATION.md  __init__.py  factory.py
backend/api/: __init__.py  dependencies.py  main.py  ppt_service.py
backend/archive/: README_ARCHIVE.md
backend/archive/slide_agent/: README.md  main.py  pyproject.toml
backend/archive/slide_agent/slide_agent/: agent_utils.py  config.py
backend/archive/slide_agent/slide_agent/sub_agents/ppt_writer/: agent.py  prompt.py  tools.py
backend/archive/slide_agent/slide_agent/sub_agents/research_topic/mcpserver/: research_tool.py
backend/archive/slide_agent/slide_agent/sub_agents/split_topic/: agent.py
backend/cognition/: __init__.py
backend/data/: .gitkeep
backend/docs/: ARCHITECTURE_LAYERS_EXPLAINED.md  FLAT_ARCHITECTURE_SUMMARY.md  QUICK_REFERENCE.md  REFACTORING_GUIDE.md  agent_skill_mapping.json  demo_chinese_skills.py  demo_token_savings.py
backend/domain/: DDD_RESTRUCTURE_SUMMARY.md  __init__.py
backend/hostAgentAPI/: README.md  env_template.txt  host_agent_api.py
backend/infrastructure/: __init__.py
backend/memory/: README.md  __init__.py  init_mysql.sql  manager.py  memory_aware_agent.py  models.py  promotion.py  test_imports.py
backend/migrations/: create_auth_tables.py  (+1 more)
backend/models/: role.py  (+5 more)
docs/: AGENT_TOOLS_SKILLS_ANALYSIS.md  FRONTEND_GENERATION_CONTRACT.md  IMPORT_GUIDE.md  PPT生成多智能体架构设计文档.md  PROJECT_ARCHITECTURE.md  adk的callback调用原理.md  backend-architecture.md  domain-layer-fixes.md  domain-layer.md  langchain-quickstart.md  本地模型适配.md  简介.md  问题.md
frontend/: .env.example  .eslintrc.cjs  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env_template  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tmpclaude-63b1-cwd  tsconfig.json
minimind/: eval_model.py
opencode-dev/: .prettierignore  AGENTS.md  README.ar.md  README.br.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.zh.md  README.zht.md
scripts/: clean_imports.py  test_ppt_endpoints.py
tools/: LLM_cache.py  README.md  bing_search.py  bing_search_cache.py  requirements.txt  weixin_search.py  xml_convert_json.py
简历/: 01-项目描述-简短版.md  02-亮点1-多智能体协作.md  03-亮点2-轻量模型训练.md  04-亮点3-统一工具系统.md  05-亮点4-分层记忆系统.md  MultiAgentPPT-项目简历.md  模板.md
(+1098 files in other folders)
